--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,26 @@
+.fundo{
+  background: url(logo.png) no-repeat ;
+  background-size: 150px;
+  background-position: center;
+  height: 70px;
+}
+
 .embla {
     overflow: hidden;
+    
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .embla__container {
     display: flex;
+
   }
   .embla__slide {
     flex: 0 0 100%;
 
     width: 100%;
-    height: 99vh;
+    height: 90vh;
+
   }
